# SAM-6D-LEGO

./: .gitignore  README.md
SAM-6D/: demo.sh  prepare_uv.sh  pyproject.toml
SAM-6D/Data/Example/: camera.json
SAM-6D/Data/lego_micro_building/: camera.json
SAM-6D/Instance_Segmentation_Model/: README.md  run_inference_custom.py
SAM-6D/Instance_Segmentation_Model/model/: detector.py  loss.py  sam.py  utils.py
SAM-6D/Instance_Segmentation_Model/model/layers/: attention.py
SAM-6D/Pose_Estimation_Model/: README.md  run_inference_custom.py
SAM-6D/Pose_Estimation_Model/model/: feature_extraction.py
SAM-6D/Pose_Estimation_Model/model/pointnet2/: setup.py
SAM-6D/Render/: render_custom_templates.py
